--- a/pkg/R4X/inst/doc/r4xslides.tex
+++ b/pkg/R4X/inst/doc/r4xslides.tex
@@ -177,7 +177,7 @@ $bar
 
 \section{Create XML}
 
-\subsection{Create XML with R4X}
+\subsection{The \rfun{xml} method}
 \begin{frame}[fragile]
 \frametitle{The \rfun{xml} generic function}
 \framesubtitle{The default method tries to convert strings into XML nodes, including nested nodes. Remember: Strings can be multiline in R.}
@@ -210,7 +210,7 @@ $bar
 \subsection{\texttt{brew}ing}
 \begin{frame}[fragile]
 \frametitle{Dynamic content with \rfun{brew}}
-\framesubtitle{The \rfun{brew} package provides a psp-like templating framework for R. The \texttt{<\%=} operator is used by R4X to add dynamic content without
+\framesubtitle{The \rfun{brew} package provides a jsp-like templating framework for R. The \texttt{<\%=} operator is used by R4X to add dynamic content without
 having to use \rfun{paste} or \rfun{sprintf}. } 
 \begin{Schunk}
 \begin{Sinput}
@@ -753,8 +753,14 @@ R References
 \begin{itemize}
  \item \rfun{XML} ($\hat{\Omega}$). \url{http://www.omegahat.org/RSXML/}
  \item \rfun{brew}: \url{http://www.rforge.net/brew/}
- \item \rfun{operators}: \url{http://www.mango-solutions.com}
+ \item \rfun{operators}: \url{http://r-forge.r-project.org/projects/operators}
 \end{itemize}
+
+Gears picture
+\begin{itemize}
+ \item \url{http://www.flickr.com/photos/gamin/383003317/}
+\end{itemize}
+
 
 \end{frame}
 
